--- a/src/main/resources/fxml/GUI.fxml
+++ b/src/main/resources/fxml/GUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -122,10 +123,37 @@
                      <children>
                         <HBox spacing="5.0">
                            <children>
-                              <Label text="Settings" />
+                              <Label text="Theme:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font></Label>
+                              <ChoiceBox fx:id="settingThemeChBox" prefWidth="150.0" onAction="#doChangeTheme"/>
+                           </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </HBox>
+                        <HBox spacing="5.0">
+                           <children>
+                              <Label text="Encoding:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <ChoiceBox fx:id="settingEncodingChBox" prefWidth="150.0" onAction="#doChangeEncoding"/>
+                           </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </HBox>
+                        <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                        <HBox spacing="5.0">
+                           <children>
+                              <Pane prefHeight="1.0" prefWidth="1.0" HBox.hgrow="ALWAYS" />
+                              <Label text="Made by Nils" />
+                              <Pane prefHeight="1.0" prefWidth="1.0" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
