--- a/src/main/resources/fxml/GUI.fxml
+++ b/src/main/resources/fxml/GUI.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import de.nils.conntest.gui.Components.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/base.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:id="mainBorderPane">
+<BorderPane fx:id="mainBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/base.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox id="left" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -41,6 +43,18 @@
                   <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#doSelectClient" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
                         <Image url="@images/ClientLogo.png" />
+                     </image>
+                  </ImageView>
+               </center>
+               <padding>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </padding>
+            </BorderPane>
+            <BorderPane fx:id="portScannerBorderPaneBtn">
+               <center>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#doSelectPortScanner" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                     <image>
+                        <Image url="@images/PortScannerLogo.png" />
                      </image>
                   </ImageView>
                </center>
@@ -72,7 +86,7 @@
    <center>
       <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane fx:id="serverPane" visible="false">
+            <AnchorPane id="center" fx:id="serverPane" visible="false">
                <children>
                   <VBox spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -93,7 +107,7 @@
                      </padding>
                   </VBox>
                </children></AnchorPane>
-            <AnchorPane fx:id="clientPane" visible="false">
+            <AnchorPane id="center" fx:id="clientPane" visible="false">
                <children>
                   <VBox spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -117,7 +131,32 @@
                   </VBox>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="settingsPane">
+            <AnchorPane id="center" fx:id="portScannerPane">
+               <children>
+                  <VBox spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <HBox spacing="5.0">
+                           <children>
+                              <TextField fx:id="scannerAddress" promptText="Address" />
+                              <TextField fx:id="scannerStartPort" prefHeight="26.0" prefWidth="66.0" promptText="1" />
+                              <TextField fx:id="scannerEndPort" prefHeight="26.0" prefWidth="66.0" promptText="65535" />
+                              <Button id="initiateBtn" fx:id="scanBtn" mnemonicParsing="false" onAction="#doStartPortScanner" text="Scan" />
+                           </children>
+                        </HBox>
+                        <TableView fx:id="portScannerResultTableView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="Port" />
+                            <TableColumn prefWidth="75.0" text="Service" />
+                          </columns>
+                        </TableView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+               </children>
+            </AnchorPane>
+            <AnchorPane id="center" fx:id="settingsPane" visible="false">
                <children>
                   <VBox spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -127,7 +166,7 @@
                                  <font>
                                     <Font size="20.0" />
                                  </font></Label>
-                              <ChoiceBox fx:id="settingThemeChBox" prefWidth="150.0" onAction="#doChangeTheme"/>
+                              <ChoiceBox fx:id="settingThemeChBox" onAction="#doChangeTheme" prefWidth="150.0" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -140,7 +179,7 @@
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <ChoiceBox fx:id="settingEncodingChBox" prefWidth="150.0" onAction="#doChangeEncoding"/>
+                              <ChoiceBox fx:id="settingEncodingChBox" onAction="#doChangeEncoding" prefWidth="150.0" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
