--- a/src/main/resources/fxml/GUI.fxml
+++ b/src/main/resources/fxml/GUI.fxml
@@ -99,6 +99,7 @@
                         <StyledListView fx:id="serverMessages" VBox.vgrow="ALWAYS" />
                         <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
                            <children>
+                              <Button fx:id="serverMessageExportBtn" disable="false" mnemonicParsing="false" onAction="#doExportServerMessage" text="Export" />
                               <Button fx:id="serverMessageBtn" disable="true" mnemonicParsing="false" onAction="#doSendServerMessage" text="+ Message" />
                            </children></HBox>
                      </children>
@@ -121,6 +122,7 @@
                         <StyledListView fx:id="clientMessages" VBox.vgrow="ALWAYS" />
                         <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
                            <children>
+                              <Button fx:id="clientMessageExportBtn" disable="false" mnemonicParsing="false" onAction="#doExportClientMessage" text="Export" />
                               <Button fx:id="clientMessageBtn" disable="true" mnemonicParsing="false" onAction="#doSendClientMessage" text="+ Message" />
                            </children>
                         </HBox>
